# agent-spec

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.txt  VERSION  _installation_tools.sh  allowlist.txt  bandit.yaml  changelog.html  clean-install-dev.sh  conduct.html  contributing.html  docs_home.html  faqs.html  genindex.html  index.html  install-all-dev.sh  installation.html  objects.inv  pyproject.toml  rfcs-template.html  search.html  security.html  setup.cfg  style_guide.html  switcher.json
conformance_test_suite/: README.md  generate_conformance_test_report.py  generate_conformance_test_report.sh  install-dev.sh  install.sh  pyproject.toml  setup.cfg  setup.py
conformance_test_suite/benchmarks/: README.md
conformance_test_suite/benchmarks/model_specs/: GPT-5-mini.json  GPT-5.json
conformance_test_suite/benchmarks/tau2-bench/: README.md  install-dev.sh  run.sh
conformance_test_suite/local_deterministic_llm_server/: main.py
conformance_test_suite/runtimes/agentframeworkruntime/: README.md  pyproject.toml  setup.py
conformance_test_suite/runtimes/autogenruntime/: README.md  setup.py
conformance_test_suite/runtimes/crewairuntime/: README.md  setup.py
conformance_test_suite/runtimes/langgraphruntime/: README.md  install-dev.sh  setup.py
conformance_test_suite/runtimes/openairuntime/: README.md  install-dev.sh  setup.py
conformance_test_suite/runtimes/wayflowruntime/: README.md  install-dev.sh  setup.py
conformance_test_suite/src/agentspec_cts_sdk/: __init__.py
conformance_test_suite/tests/: common_server.py  conftest.py
conformance_test_suite/tests/mcp/: mcp_server.py
conformance_test_suite/tests/transforms/: conftest.py
pyagentspec/: AGENTS.md  MANIFEST.in  README.md  benchmark_caching.py  install-dev.sh  install.sh  pyproject.toml  requirements-dev-common.txt  requirements-dev-github.txt  requirements-dev.txt  setup.cfg  setup.py
pyagentspec/constraints/: constraints.txt  constraints_dev.txt
pyagentspec/src/pyagentspec/: __init__.py  _component_registry.py  _lazy_loader.py  _openaiagent.py  _utils.py  a2aagent.py  agent.py  agenticcomponent.py  auth.py  component.py  managerworkers.py  ociagent.py  property.py  remoteagent.py  retrypolicy.py  specialized_agent.py  swarm.py  templating.py  validation_helpers.py  versioning.py
pyagentspec/tests/: conftest.py  retry_test.py  run_tests.sh  test_a2aagent.py  test_abstract_components.py  test_agentspecloader_stdio.py  test_bare_llmconfig_adapter_dispatch.py  test_branching.py  test_component.py  test_componentpolicy.py  test_componentwithio.py  test_datastores.py  test_disaggregatedconfig.py  test_docstring.py  test_flowbuilder.py  test_ociagent.py  test_ocigenaiconfig.py  test_partialcomponentconstruction.py  test_properties.py  test_retry_policy_serialization.py  test_schema_generation.py  test_specialized_agent.py  test_templating.py  test_utils.py  test_versioning.py
pyagentspec/tests/adapters/: api_server.py  conftest.py  mcp_start_server.py  server_utils.py  start_mcp_server.py  test_remote_tool_retry_policy_cases.py  test_template_rendering.py  test_url_security.py  test_url_validation.py  utils.py
pyagentspec/tests/agentspec_configs/: a2aagent.yaml  example_flow_with_structured_generation_no_version.yaml  example_serialized_agent_with_tools.yaml  example_serialized_agent_with_tools_25_4_2.yaml  example_serialized_agent_with_tools_and_builtin_tools.yaml  example_serialized_agent_with_tools_and_toolboxes.yaml  example_serialized_agent_with_tools_and_toolboxes_26_1_2.yaml  example_serialized_agent_with_tools_and_toolboxes_26_2_0.yaml  example_serialized_agent_with_tools_no_human_in_the_loop.yaml  example_serialized_flow.yaml  example_serialized_flow_executing_agent.yaml  example_serialized_flow_with_branching_node.yaml  example_serialized_flow_with_properties.yaml  example_serialized_llm_node.yaml  example_serialized_llm_node_as_nested_reference.yaml  example_serialized_llm_node_as_versioned_nested_reference.yaml  example_serialized_llm_node_without_agentspec_version.yaml  example_serialized_managerworkers.yaml  example_serialized_specialized_agent.yaml  example_serialized_swarm.yaml  example_tools_with_confirmation_25_4_2.yaml  flow_with_all_references_at_root.yaml  flow_with_multiple_levels_of_references.yaml  ociagent.yaml  ocigenaiconfig.yaml  serialized_flow_with_inlined_components.yaml
pyagentspec/tests/evaluation/: conftest.py  test_evaluator.py
pyagentspec/tests/security/: __init__.py  check_rootLogger_handles_are_null.py  check_undefined_logger.py  logging_tests.sh  test_filesystem_integrity.py
pyagentspec/tests/serialization/: conftest.py  test_agent.py  test_api_node.py  test_auth.py  test_catchexception_node.py  test_flow.py  test_flow_node.py  test_gemini_config.py  (+19 more)
pyagentspec/tests_fuzz/: test_fuzz.py
(+1339 files in other folders)
