[metadata]
description_file = README.md

[flake8]

max_line_length = 100

# For list of codes see:
#   * https://flake8.pycqa.org/en/latest/user/error-codes.html
#   * https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
#   * https://www.pydocstyle.org/en/stable/error_codes.html#default-conventions
#   * https://pypi.org/project/pep8-naming/

# D1XX: Missing docstrings. Re-enable to uncover more problems.
# D200: One-line docstring should fit on one line with quotes. Re-enable to uncover more problems.
# D202: No blank lines allowed after function docstring. Ignored.
# D205: 1 blank line required between summary line and description.
#           Re-enable to uncover more problems.
# D209: Multi-line docstring closing quotes should be on a separate line. Ignored.
# D400: First line should end with a period. Re-enable to uncover more problems.
ignore = E121,E123,E126,E226,W503,W504,D1,D200,D202,D205,D209,D400

[mypy]
plugins = numpy.typing.mypy_plugin
