[project]
name = "pyagentspec"
dynamic = ["version"]
description = "Package defining the PyAgentSpec library for Agents and LLM fixed-flows abstractions."
license = {text = "Apache-2.0 OR UPL-1.0"}
readme = "README.md"
authors = [
{name = "Oracle"},
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Natural Language :: English",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["NLP", "text generation", "code generation", "LLM", "Assistant", "Tool", "Agent"]
requires-python = ">=3.10"
dependencies = [
	"jsonschema>=4.23.0,<5",
	"pydantic>=2.10,<2.13",
	"pyyaml>=6,<7",
	"httpx>0.28.0",
	"urllib3>=2.5.0",  # needed to avoid a CVE present on earlier versions
	"anyio>=4.10.0,<4.12.0",  # to avoid async issues in higher anyio versions
]

[project.optional-dependencies]
full = ["pyagentspec[autogen, langgraph_mcp]"]
autogen = [
	"autogen-core>=0.5.6; python_version < '3.13'",
	"autogen-ext[ollama,openai]>=0.5.6; python_version < '3.13'",
	"autogen-agentchat>=0.5.6; python_version < '3.13'",
]
langgraph = [
	"langgraph>=0.5.3,<1.0.0",
	"langchain-core>=0.3,<1.0.0",
	"langchain-openai>=0.3.7",
	"langchain-ollama>=0.3.3",
	"langgraph-checkpoint>=3.0.1,<4.0.0",  # To mitigate CVE-2025-64439
]
langgraph_mcp = [
	"langchain-mcp-adapters>=0.1.13,<0.2.0",
	"pyagentspec[langgraph]",
]

[dependency-groups]
dev = [
	"pyagentspec[full]",
]

[build-system]
requires = [
	"setuptools<72.0.0",
	"wheel",
	# setuptools-scm lets us include all necessary files (e.g. .pyx files) in the source
	# distribution (sdist) without needing a MANIFEST.in file.
	"setuptools-scm==7.1.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100  # should be the same as black above

[[tool.mypy.overrides]]
module = [
    'tests.*',
    'setup',
]
ignore_errors = true
