[metadata]
description_file = README

[tool:pytest]
filterwarnings =
    # We decide to raise error for warnings in order to make sure that we address them or at least
    # consciously ignore them. If you write code that intentionally raises warnings, you can
    # capture that warnings are raised using `with pytest.warns(WarningClass):`. See pytest
    # documentation: https://docs.pytest.org/en/7.1.x/how-to/capture-warnings.html#warns
    error

[mypy]
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]
